~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Only pass clang-specific `-stdlib=` to the preprocessor.


Bug fixes
~~~~~~~~~

- Include m4 files used by configure.ac in the source dist archives.

- Corrected "Performance" section in the manual regarding `__DATE_`, `__TIME__`
  and `__FILE__` macros.

- Fixed build on Solaris 10+ and AIX 7.

- Fixed failure to create directories on QNX.


ccache 3.2.4
------------
Release date: 2015-10-08


Bug fixes
~~~~~~~~~

- Fixed build error related to zlib on systems with older make versions
  (regression in ccache 3.2.3).

- Made conversion-to-bool explicit to avoid build warnings (and potential
  runtime errors) on legacy systems.

- Improved signal handling: Kill compiler on SIGTERM; wait for compiler to exit
  before exiting; die appropriately.

- Minor fixes related to Windows support.

- The correct compression level is now used if compression is requested.

- Fixed a bug where cache cleanup could be run too early for caches larger than
  64 GiB on 32-bit systems.


ccache 3.2.3
------------
Release date: 2015-08-16


New features and improvements
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Added support for compiler option `-gsplit-dwarf`.


Bug fixes
~~~~~~~~~

- Support external zlib in nonstandard directory.

- Avoid calling `exit()` inside an exit handler.

- Let exit handler terminate properly.

- Bail out on compiler option `--save-temps` in addition to `-save-temps`.

- Only log "Disabling direct mode" once when failing to read potential include
  files.


ccache 3.2.2
------------
Release date: 2015-05-10


New features and improvements
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Added support for `CCACHE_COMPILERCHECK=string:<value>`. This is a faster
  alternative to `CCACHE_COMPILERCHECK=<command>` if the command's output can
  be precalculated by the build system.

- Add support for caching code coverage results (compiling for gcov).


Bug fixes
~~~~~~~~~

- Made hash of cached result created with and without `CCACHE_CPP2` different.