@@ -23,6 +23,9 @@ Bug fixes
 
 - Fixed failure to create directories on QNX.
 
+- Don't (try to) update manifest file in ``read-only and ``read-only direct''
+  modes.
+
 
 ccache 3.2.4
 ------------
